; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/extr_esp_event.c_esp_event_loop_run_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/extr_esp_event.c_esp_event_loop_run_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"running task for loop %p\00", align 1
@portMAX_DELAY = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [27 x i8] c"suspended task for loop %p\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @esp_event_loop_run_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @esp_event_loop_run_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = ptrtoint i8* %5 to i32
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* @TAG, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @ESP_LOGD(i32 %7, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %8)
  br label %10

10:                                               ; preds = %1, %18
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @portMAX_DELAY, align 4
  %13 = call i64 @esp_event_loop_run(i32 %11, i32 %12)
  store i64 %13, i64* %3, align 8
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* @ESP_OK, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  br label %19

18:                                               ; preds = %10
  br label %10

19:                                               ; preds = %17
  %20 = load i32, i32* @TAG, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @ESP_LOGE(i32 %20, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = call i32 @vTaskSuspend(i32* null)
  ret void
}

declare dso_local i32 @ESP_LOGD(i32, i8*, i32) #1

declare dso_local i64 @esp_event_loop_run(i32, i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1

declare dso_local i32 @vTaskSuspend(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
